Update image resolution

--- a/main.html
+++ b/main.html
@@ -78,22 +78,27 @@
     
     <main>
         <section class="section1">
-            <div class="container">
-              <div class="row">
-                <div class="colclass1 col-sm-12 col-lg-6">
+          <div class="container">
+            <div class="row">
+
+              <div class="col-sm-12 col-lg-6">
+                <div class="colclass1">
                   <h1 class="heading">
                     where <span>we create</span> beautiful smiles
                   </h1>
                   <p class="paragraph">
                     We believe that a confident, healthy smile is the key to a brighter future, and we're committed to helping our patients achieve just that. Come see us and experience the Quaker Pointe Orthodontics difference for yourself."
-                  </p><br>
-                  <a href="#" class="para-btn">request an appointment</a>
+                  </p>                 
                 </div>
-                  <div  class="col-lg-6 col-md-6 col-sm-12">
-                    <img class="rowimg1" src="img/family.png" alt="family.png" />
-                  </div>               
               </div>
+
+              <div  class="col-lg-6 col-md-6 col-sm-12">
+                <div class="image1">
+                  <img class="rowimg1" src="img/family.png" alt="family.png" />
+                </div>
+              </div>               
             </div>
+          </div>
         </section>
 
         <section class="section2">
