--- a/main.html
+++ b/main.html
@@ -88,7 +88,8 @@
                   </h1>
                   <p class="paragraph">
                     We believe that a confident, healthy smile is the key to a brighter future, and we're committed to helping our patients achieve just that. Come see us and experience the Quaker Pointe Orthodontics difference for yourself."
-                  </p>                 
+                  </p> 
+                  <a href="#" class="para-btn">request an appointment</a>                
                 </div>
               </div>
 
@@ -158,6 +159,10 @@
               </div>         
             </div>
           </div>
+        </section>
+
+        <section class="section3">
+
         </section>
         
     </main>
