--- a/main.html
+++ b/main.html
@@ -80,7 +80,6 @@
         <section class="section1">
           <div class="container">
             <div class="row">
-
               <div class="col-sm-12 col-lg-6">
                 <div class="colclass1">
                   <h1 class="heading">
@@ -162,9 +161,27 @@
         </section>
 
         <section class="section3">
-
+          <img src="img/man.jpg" alt="man image">
+          <div class="container">
+            <div class="row">             
+              <div class="col-sm-12 col-lg-6 ">
+                <div class="sec3-paragraph">
+                  <h3>
+                    Why Choose Quaker pointe for Your Dental Needs?
+                  </h3>
+                  <p class="sec3-para1">
+                    We set ourselves apart from the competition with our emphasis on quality in materials that we use and the service that we provide.
+                  </p>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
         </section>
-        
+
+
     </main>
 
     <footer>
