--- a/main.html
+++ b/main.html
@@ -181,7 +181,47 @@
           </div>
         </section>
 
+        <section class="section4">
+          <div class="sec4-content">
+            <h3>
+              Services to make your smile brighter
+            </h3>
+            <p>
+              Achieve your dream smile with our comprehensive range of dental service
+            </p>
+            <a href="#" class="sec4-content-btn">VIew all Services</a>
+          </div>
 
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-4 ">
+                <div class="img-card">
+                  <img src="img/girl1.jpg" alt="girl1">
+                  <p>
+                    Invisalign
+                  </p>
+                </div>
+              </div>
+              <div class="col-lg-4 ">
+                <div class="img-card">
+                  <img src="img/girl2.jpg" alt="girl2">
+                  <p>
+                    Braces
+                  </p>
+                </div>
+              </div>
+              <div class="col-lg-4 ">
+                <div class="img-card">
+                  <img src="img/girl3.jpg" alt="girl3">
+                  <p>
+                    Retainer
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </section>
     </main>
 
     <footer>
