--- a/main.html
+++ b/main.html
@@ -222,9 +222,149 @@
           </div>
 
         </section>
+
+        <section class="section5">
+          <div class="container">
+            <div class="row">
+              <div class="col-sm-12 col-lg-6">
+                <div class="sec5col">
+                  <h1 class="sec5-heading">
+                    Meet Dr. Adina Jarosh-wolfe DDS Experienced Orthodontist
+                  </h1>
+                  <p class="sec5-para">
+                    Dr. Jarosh-Wolfe earned her degree from Temple University's prestigious dental program and has dedicated her career to helping patients achieve healthy, beautiful smiles.As an expert in orthodontics, Dr. Jarosh-Wolfe is passionate about creating customized treatment plans for her patients. She takes the time to listen to their concerns and carefully assesses their dental needs, ensuring that they receive the best possible care.
+                  </p> 
+                  <a href="#" class="sec5para-btn">More about me</a>                
+                </div>
+              </div>
+
+              <div  class="col-lg-6 col-md-6 col-sm-12">
+                <div class="image1">
+                  <img class="sec5image" src="img/girl5.png" alt="girl5.png" />
+                </div>
+              </div>               
+            </div>
+          </div>
+        </section>
+
+        <section class="section6">
+          <img src="img/threegirls.jpg" alt="about-picture" />
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-6">
+                <div class="Sec6-class1">
+                  <div class="get-started-header">
+                    <h5>Get started</h5>
+                    <h1>
+                      Are you ready to go for that <span>Amazing</span> smile ?
+                    </h1>
+                  </div>
+  
+                  <form action="#">
+                    <div class="name">
+                      <input type="text" name="name" placeholder="NAME" />
+                    </div>
+                    <div class="email-phone">
+                      <div class="email">
+                        <input type="text" name="email" placeholder="EMAIL" />
+                      </div>
+                      <div class="phone">
+                        <input type="text" name="email" placeholder="PHONE" />
+                      </div>
+                    </div>
+                    <div class="message">
+                      <textarea
+                        name="message"
+                        id="massage"
+                        cols="10"
+                        rows="5"
+                        placeholder="MESSAGE"
+                      ></textarea>
+                    </div>
+                    <a href="#">Request An Appointment</a>
+                  </form>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
     </main>
 
     <footer>
+      <section class="footer">
+        <div class="container">
+          <div class="row">
+            <div class="col-1 footer-1">
+              <div class="footer-align">
+                <ul>
+                  <li><a href="#">home</a></li>
+                  <li><a href="#">about</a></li>
+                  <li><a href="#">general</a></li>
+                  <li><a href="#">invisalign</a></li>
+                  <li><a href="#">FAQ</a></li>
+                </ul>
+              </div>
+            </div>
+            <div class="col-1 footer-1">
+              <div class="footer-align">
+                <ul>
+                  <li><a href="#">patients info</a></li>
+                  <li><a href="#">braces</a></li>
+                  <li><a href="#">reviews</a></li>
+                  <li><a href="#">gallary</a></li>
+                  <li><a href="#">contact</a></li>
+                </ul>
+              </div>
+            </div>
+            <div class="col-4 footer-2">
+              <div class="footer-nav-flex footer-align">
+                <ul>
+                  <li><a href="#">monday</a></li>
+                  <li><a href="#">tuesday</a></li>
+                  <li><a href="#">wedneday</a></li>
+                  <li><a href="#">thursday</a></li>
+                  <li><a href="#">friday</a></li>
+                </ul>
+                <ul>
+                  <li><a href="#">8:00am - 5:00pm</a></li>
+                  <li><a href="#">8:00am - 5:00pm</a></li>
+                  <li><a href="#">8:00am - 5:00pm</a></li>
+                  <li><a href="#">8:00am - 5:00pm</a></li>
+                  <li><a href="#">8:00am - 12:00pm</a></li>
+                </ul>
+              </div>
+            </div>
+            <div class="col-2 footer-3">
+              <div class="footer-align">
+                <ul>
+                  <li>
+                    <a href="#">2100 Quaker Pointe Dr Quakertown, PA 18951 </a>
+                  </li>
+                  <li><a href="tel:(267)555-1234">(267) 555-1234</a></li>
+                  <li><a href="#">info@Quakerpointee.Com</a></li>
+                </ul>
+              </div>
+            </div>
+            <div class="col-2 footer-4">
+              <div class="footer-align">
+                <ul>
+                  <li class="footer-social-media">
+                    <a href="#"><i class="fa-brands fa-twitter fa-3x"></i></a>
+                    <a href="#"><i class="fa-brands fa-youtube fa-3x"></i></a>
+                    <a href="#"><i class="fa-brands fa-facebook fa-3x"></i></a>
+                  </li>
+                  <li>
+                    <a href="#"
+                      >Website By <img src="img/edm.png" alt="EDM"
+                    /></a>
+                  </li>
+                  <li><a href="#">All Rights Reserved 2023</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </footer>
 
 </body>
