--- a/main.html
+++ b/main.html
@@ -48,7 +48,7 @@
                     <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                     <a href="#"><i class="fa-brands fa-youtube"></i></a>
                     <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-                    <a href="#"><i class="fa-brands fa-square-instagram"></i></a>               
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>               
                 </div>
             </div>         
         </div>
@@ -228,9 +228,9 @@
             <div class="row">
               <div class="col-sm-12 col-lg-6">
                 <div class="sec5col">
-                  <h1 class="sec5-heading">
+                  <h3 class="sec5-heading">
                     Meet Dr. Adina Jarosh-wolfe DDS Experienced Orthodontist
-                  </h1>
+                  </h3>
                   <p class="sec5-para">
                     Dr. Jarosh-Wolfe earned her degree from Temple University's prestigious dental program and has dedicated her career to helping patients achieve healthy, beautiful smiles.As an expert in orthodontics, Dr. Jarosh-Wolfe is passionate about creating customized treatment plans for her patients. She takes the time to listen to their concerns and carefully assesses their dental needs, ensuring that they receive the best possible care.
                   </p> 
@@ -240,7 +240,7 @@
 
               <div  class="col-lg-6 col-md-6 col-sm-12">
                 <div class="image1">
-                  <img class="sec5image" src="img/girl5.png" alt="girl5.png" />
+                  <img class="sec5image" src="img/girl5.png" alt="girls5.png" />
                 </div>
               </div>               
             </div>
@@ -252,8 +252,8 @@
           <div class="container">
             <div class="row">
               <div class="col-lg-6">
-                <div class="Sec6-class1">
-                  <div class="get-started-header">
+                <div class="sec6-class1">
+                  <div class="sec6-class1-header">
                     <h5>Get started</h5>
                     <h1>
                       Are you ready to go for that <span>Amazing</span> smile ?
@@ -276,8 +276,8 @@
                       <textarea
                         name="message"
                         id="massage"
-                        cols="10"
-                        rows="5"
+                        cols="5"
+                        rows="4"
                         placeholder="MESSAGE"
                       ></textarea>
                     </div>
@@ -317,7 +317,7 @@
               </div>
             </div>
             <div class="col-4 footer-2">
-              <div class="footer-nav-flex footer-align">
+              <div class="footer-nav footer-align">
                 <ul>
                   <li><a href="#">monday</a></li>
                   <li><a href="#">tuesday</a></li>
@@ -349,7 +349,7 @@
               <div class="footer-align">
                 <ul>
                   <li class="footer-social-media">
-                    <a href="#"><i class="fa-brands fa-twitter fa-3x"></i></a>
+                    <a href="#"><i class="fa-brands fa-square-twitter"></i></a>
                     <a href="#"><i class="fa-brands fa-youtube fa-3x"></i></a>
                     <a href="#"><i class="fa-brands fa-facebook fa-3x"></i></a>
                   </li>
