--- a/main.html
+++ b/main.html
@@ -302,12 +302,6 @@
                   <li><a href="#">general</a></li>
                   <li><a href="#">invisalign</a></li>
                   <li><a href="#">FAQ</a></li>
-                </ul>
-              </div>
-            </div>
-            <div class="col-1 footer-1">
-              <div class="footer-align">
-                <ul>
                   <li><a href="#">patients info</a></li>
                   <li><a href="#">braces</a></li>
                   <li><a href="#">reviews</a></li>
@@ -317,21 +311,19 @@
               </div>
             </div>
             <div class="col-4 footer-2">
-              <div class="footer-nav footer-align">
-                <ul>
-                  <li><a href="#">monday</a></li>
-                  <li><a href="#">tuesday</a></li>
-                  <li><a href="#">wedneday</a></li>
-                  <li><a href="#">thursday</a></li>
-                  <li><a href="#">friday</a></li>
-                </ul>
-                <ul>
-                  <li><a href="#">8:00am - 5:00pm</a></li>
-                  <li><a href="#">8:00am - 5:00pm</a></li>
-                  <li><a href="#">8:00am - 5:00pm</a></li>
-                  <li><a href="#">8:00am - 5:00pm</a></li>
-                  <li><a href="#">8:00am - 12:00pm</a></li>
-                </ul>
+              <div class="footer-para">
+                <p>monday</p>
+                <p>tuesday</p>
+                <p>wedneday</p>
+                <p>thursday</p>
+                <p>friday</p>
+              </div>  
+              <div>
+                <p>8:00am - 5:00pm</p>
+                <p>8:00am - 5:00pm</p>
+                <p>8:00am - 5:00pm</p>
+                <p>8:00am - 5:00pm</p>
+                <p>8:00am - 12:00pm</p>
               </div>
             </div>
             <div class="col-2 footer-3">
@@ -349,9 +341,9 @@
               <div class="footer-align">
                 <ul>
                   <li class="footer-social-media">
-                    <a href="#"><i class="fa-brands fa-square-twitter"></i></a>
-                    <a href="#"><i class="fa-brands fa-youtube fa-3x"></i></a>
-                    <a href="#"><i class="fa-brands fa-facebook fa-3x"></i></a>
+                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                    <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                   </li>
                   <li>
                     <a href="#"
