--- a/main.html
+++ b/main.html
@@ -77,7 +77,7 @@
     </header>
     
     <main>
-        <section class="section1">
+      <section class="section1">
           <div class="container">
             <div class="row">
               <div class="col-sm-12 col-lg-6">
@@ -99,9 +99,9 @@
               </div>               
             </div>
           </div>
-        </section>
+      </section>
 
-        <section class="section2">
+      <section class="section2">
           <div class="container">
             <div class="row">
               <div class="col1 col-lg-4 col-sm-12">
@@ -158,9 +158,9 @@
               </div>         
             </div>
           </div>
-        </section>
+      </section>
 
-        <section class="section3">
+      <section class="section3">
           <img src="img/man.jpg" alt="man image">
           <div class="container">
             <div class="row">             
@@ -179,20 +179,20 @@
               </div>
             </div>
           </div>
-        </section>
+      </section>
 
-        <section class="section4">
-          <div class="sec4-content">
-            <h3>
-              Services to make your smile brighter
-            </h3>
-            <p>
-              Achieve your dream smile with our comprehensive range of dental service
-            </p>
-            <a href="#" class="sec4-content-btn">VIew all Services</a>
-          </div>
-
+      <section class="section4">
+        <div class="sec4div">
           <div class="container">
+            <div class="sec4-content">
+              <h3>
+                Services to make your smile brighter
+              </h3>
+              <p>
+                Achieve your dream smile with our comprehensive range of dental service.
+              </p>
+              <a href="#" class="sec4-content-btn">VIew all Services</a>
+            </div>
             <div class="row">
               <div class="col-lg-4 ">
                 <div class="img-card">
@@ -220,34 +220,29 @@
               </div>
             </div>
           </div>
+        </div>
+      </section>
 
-        </section>
-
-        <section class="section5">
-          <div class="container">
-            <div class="row">
-              <div class="col-sm-12 col-lg-6">
-                <div class="sec5col">
-                  <h3 class="sec5-heading">
+      <section class="section5">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-6 col-sm-12">
+              <div class="sec5col">
+                  <h2 class="sec5-heading">
                     Meet Dr. Adina Jarosh-wolfe DDS Experienced Orthodontist
-                  </h3>
+                  </h2>
                   <p class="sec5-para">
                     Dr. Jarosh-Wolfe earned her degree from Temple University's prestigious dental program and has dedicated her career to helping patients achieve healthy, beautiful smiles.As an expert in orthodontics, Dr. Jarosh-Wolfe is passionate about creating customized treatment plans for her patients. She takes the time to listen to their concerns and carefully assesses their dental needs, ensuring that they receive the best possible care.
                   </p> 
-                  <a href="#" class="sec5para-btn">More about me</a>                
+                  <a href="#" class="sec5para-btn">More about me</a>
                 </div>
               </div>
-
-              <div  class="col-lg-6 col-md-6 col-sm-12">
-                <div class="image1">
-                  <img class="sec5image" src="img/girl5.png" alt="girls5.png" />
-                </div>
-              </div>               
             </div>
           </div>
-        </section>
+          <img src="img/girl5.png" alt="girl-5">
+      </section>
 
-        <section class="section6">
+      <section class="section6">
           <img src="img/threegirls.jpg" alt="about-picture" />
           <div class="container">
             <div class="row">
@@ -287,10 +282,53 @@
               </div>
             </div>
           </div>
-        </section>
+      </section>
     </main>
 
     <footer>
+      <section class="footer">
+        <div class="container">
+          <div class="sub-section1">
+            <ul>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">About</a></li>
+              <li><a href="#">General</a></li>
+              <li><a href="#">Invisalign</a></li>
+              <li><a href="#">FAQ</a></li>
+              <li><a href="#">Ptient Info</a></li>
+              <li><a href="#">Braces</a></li>
+              <li><a href="#">Reviews</a></li>
+              <li><a href="#">Gallery</a></li>
+              <li><a href="#">Content</a></li>
+            </ul>   
+          </div> 
+          <div class="sub-section2">
+            <p>monday<span>8:00am - 5:00pm</span></p>
+              <p>tuesday<span>8:00am - 5:00pm</span></p>
+              <p>wedneday <span>8:00am - 5:00pm</span></p>
+              <p>thursday <span>8:00am - 5:00pm</span></p>                <p>friday <span>8:00am - 12:00pm</span></p>
+          </div> 
+          <div class="sub-section3">
+            <p >2100 Quaker Pointe Dr Quakertown, PA 18951</p>
+            <p><a href="tel:(267) 555-1234">(267) 555-1234</a></p>
+            <p><a href="mailto:info@quakerpointe.com">info@quakerpointe.com</a></p>
+          </div> 
+          <div class="sub-section4">
+            <div class="footer-social">
+              <a href=""><i class="fa-brands fa-twitter"></i></a>
+              <a href=""><i class="fa-brands fa-youtube"></i></a>
+              <a href=""><i class="fa-brands fa-facebook-f"></i></a>
+            </div>
+            <p>Website By <a href="#"><img src="img/edm.png" alt="EDM"/></a></p>
+
+            <p>All rights reserved 2023</p>
+          </div> 
+        </div>
+      </section>
+    </footer>
+
+
+    <!-- <footer>
       <section class="footer">
         <div class="container">
           <div class="row">
@@ -302,6 +340,12 @@
                   <li><a href="#">general</a></li>
                   <li><a href="#">invisalign</a></li>
                   <li><a href="#">FAQ</a></li>
+                </ul>
+              </div>
+            </div>
+            <div class="col-1 footer-1">
+              <div class="footer-align">
+                <ul>
                   <li><a href="#">patients info</a></li>
                   <li><a href="#">braces</a></li>
                   <li><a href="#">reviews</a></li>
@@ -311,19 +355,21 @@
               </div>
             </div>
             <div class="col-4 footer-2">
-              <div class="footer-para">
-                <p>monday</p>
-                <p>tuesday</p>
-                <p>wedneday</p>
-                <p>thursday</p>
-                <p>friday</p>
-              </div>  
-              <div>
-                <p>8:00am - 5:00pm</p>
-                <p>8:00am - 5:00pm</p>
-                <p>8:00am - 5:00pm</p>
-                <p>8:00am - 5:00pm</p>
-                <p>8:00am - 12:00pm</p>
+              <div class="footer-nav-flex footer-align">
+                <ul>
+                  <li><a href="#">monday</a></li>
+                  <li><a href="#">tuesday</a></li>
+                  <li><a href="#">wedneday</a></li>
+                  <li><a href="#">thursday</a></li>
+                  <li><a href="#">friday</a></li>
+                </ul>
+                <ul>
+                  <li><a href="#">8:00am - 5:00pm</a></li>
+                  <li><a href="#">8:00am - 5:00pm</a></li>
+                  <li><a href="#">8:00am - 5:00pm</a></li>
+                  <li><a href="#">8:00am - 5:00pm</a></li>
+                  <li><a href="#">8:00am - 12:00pm</a></li>
+                </ul>
               </div>
             </div>
             <div class="col-2 footer-3">
@@ -341,13 +387,13 @@
               <div class="footer-align">
                 <ul>
                   <li class="footer-social-media">
-                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                    <a href="#"><i class="fa-brands fa-youtube"></i></a>
-                    <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="#"><i class="fa-brands fa-twitter fa-3x"></i></a>
+                    <a href="#"><i class="fa-brands fa-youtube fa-3x"></i></a>
+                    <a href="#"><i class="fa-brands fa-facebook fa-3x"></i></a>
                   </li>
                   <li>
                     <a href="#"
-                      >Website By <img src="img/edm.png" alt="EDM"
+                      >Website By <img src="img/logo-2.png" alt="EDM"
                     /></a>
                   </li>
                   <li><a href="#">All Rights Reserved 2023</a></li>
@@ -357,7 +403,7 @@
           </div>
         </div>
       </section>
-    </footer>
+    </footer> -->
 
 </body>
 </html>
